New monitor refresh rate kanshi fix 4

--- a/dot_config/kanshi/config
+++ b/dot_config/kanshi/config
@@ -17,7 +17,7 @@ profile Duo {
 profile Desktop {
     output eDP-1 scale 2 position 0,0   adaptive_sync on
     output eDP-2 scale 2 position 0,900 adaptive_sync on
-    output HDMI-A-1 resolution 2560x1440@119.998Hz scale 1 position 1440,0
+    output HDMI-A-1 mode 2560x1440@119.998Hz scale 1 position 1440,0
     exec busctl --user set-property rs.wl-gammarelay /outputs/eDP_1 rs.wl.gammarelay Temperature q 3850
     exec busctl --user set-property rs.wl-gammarelay /outputs/eDP_2 rs.wl.gammarelay Temperature q 3350
     exec busctl --user set-property rs.wl-gammarelay /outputs/HDMI_A_1 rs.wl.gammarelay Temperature q 4000
