using nvim scrollback buffer in kitty terminal

--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -34,6 +34,21 @@ map ctrl+minus decrease_font_size
 unmap ctrl+shift+b
 map ctrl+shift+b send_text all \x1b[66;5u
 
+### Scrollback buffer from https://github.com/mikesmithgh/kitty-scrollback.nvim/blob/main/README.md#%EF%B8%8F-setup
+# Enable remote control for Kitty
+allow_remote_control yes
+# Set up a Unix socket for communication
+listen_on unix:/tmp/kitty
+# Enable shell integration for command tracking
+shell_integration enabled
+# Alias for kitty-scrollback.nvim
+action_alias kitty_scrollback_nvim kitten /var/home/dev/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
+# Key mappings to browse scrollback buffer in Neovim
+map kitty_mod+h kitty_scrollback_nvim
+map kitty_mod+g kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
+# Mouse mapping to view clicked command output in Neovim
+mouse_map ctrl+shift+right press ungrabbed combine : mouse_select_command_output : kitty_scrollback_nvim --config ksb_builtin_last_visited_cmd_output
+#### 
 
 # maybe ctrl+directions to go back 1 word etc
 ## Clipboard
