--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -128,29 +128,29 @@ bindsym $mod+0 workspace 10
 
 bindsym $mod+backslash workspace 20
 
-workspace 1 output 'eDP-1'
-workspace 2 output 'eDP-1'
-workspace 3 output 'eDP-1'
-workspace 4 output 'eDP-1'
-workspace 5 output 'eDP-1'
-workspace 6 output 'eDP-1'
-workspace 7 output 'eDP-1'
-workspace 8 output 'eDP-1'
-workspace 9 output 'eDP-1'
-workspace 10 output 'eDP-2'
-workspace 11 output 'eDP-2' #gpt
-workspace 12 output 'eDP-2' #music
-workspace 13 output 'eDP-2' #email
-workspace 14 output 'eDP-2' #linear
-workspace 15 output 'eDP-2' #notion
-workspace 16 output 'eDP-2' #obs
-workspace 17 output 'eDP-2' #calendar
+workspace 1 output "eDP-1"
+workspace 2 output "eDP-1"
+workspace 3 output "eDP-1"
+workspace 4 output "eDP-1"
+workspace 5 output "eDP-1"
+workspace 6 output "eDP-1"
+workspace 7 output "eDP-1"
+workspace 8 output "eDP-1"
+workspace 9 output "eDP-1"
+workspace 10 output "eDP-2"
+workspace 11 output "eDP-2" #gpt
+workspace 12 output "eDP-2" #music
+workspace 13 output "eDP-2" #email
+workspace 14 output "eDP-2" #linear
+workspace 15 output "eDP-2" #notion
+workspace 16 output "eDP-2" #obs
+workspace 17 output "eDP-2" #calendar
 
-workspace 19 output 'eDP-2' #slack
+workspace 19 output "eDP-2" #slack
 # Communication Tools? workspace name: comms, whatsapp web, slack, kumospace
 #    bindsym $mod+Slash exec flatpak 'run' 'net.mkiol.SpeechNote'
 
-workspace 20 output 'HDMI-A-1'
+workspace 20 output "HDMI-A-1"
 
 bindsym $mod+Shift+1 move container to workspace 1
 bindsym $mod+Shift+2 move container to workspace 2
@@ -333,7 +333,11 @@ input "1241:1031:USB-HID_Keyboard" {
     xkb_options "altwin:menu_win"
 }
 
-
+# zenbook duo touch screens
+input "1267:16986:ELAN9009:00_04F3:425B" map_to_output "eDP-1"
+input "1267:16987:ELAN9008:00_04F3:425A" map_to_output "eDP-2"
+input "1267:16986:ELAN9009:00_04F3:425B_Stylus" map_to_output "eDP-1"
+input "1267:16987:ELAN9008:00_04F3:425A_Stylus" map_to_output "eDP-2"
 
 input type:keyboard {
   xkb_options caps:none
