--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -344,10 +344,10 @@ input type:keyboard {
 }
 
 # SwayFX changes
-corner_radius 10
-blur_radius 7
-blur_passes 4
-shadows disable
+#corner_radius 10
+#blur_radius 7
+#blur_passes 4
+#shadows disable
 #layer_effects "waybar" blur enable; shadows disable; opacity 0.8
 #layer_effects "notifications" blur enable; shadows disable; opacity 0.8
 
