disable rounded corners 2

--- a/dot_config/mako/config
+++ b/dot_config/mako/config
@@ -4,7 +4,8 @@ margin=15
 padding=15,10,15
 default-timeout=2500
 border-size=1
-border-radius=15
+#border-radius=15
+border-radius=0
 anchor=top-center
 layer=overlay
 #max_visible=3
