--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -42,7 +42,7 @@ listen_on unix:/tmp/kitty
 # Enable shell integration for command tracking
 shell_integration enabled
 # Alias for kitty-scrollback.nvim
-action_alias kitty_scrollback_nvim kitten /var/home/dev/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
+action_alias kitty_scrollback_nvim kitten ~/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
 # Key mappings to browse scrollback buffer in Neovim
 map kitty_mod+h kitty_scrollback_nvim
 map kitty_mod+g kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
