first attempt at optimizing colors for oled

--- a/dot_config/mako/config
+++ b/dot_config/mako/config
@@ -12,7 +12,7 @@ layer=overlay
 
 # Colors
 
-background-color=#1e1e2e
+background-color=#000000
 text-color=#cdd6f4
 border-color=#89b4fa
 progress-color=over #313244
