--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -117,74 +117,61 @@ mouse_map ctrl+shift+right press ungrabbed combine : mouse_select_command_output
 #map ctrl+shift+backspace restore_font_size
 #map ctrl+shift+f11      toggle_fullscreen
 #
-# Catppuccin Mocha colors
+# Catppuccin Mocha colors modified for oled
 # The basic colors
-foreground              #CDD6F4
-background              #1E1E2E
-selection_foreground    #1E1E2E
-selection_background    #F5E0DC
-
-# Cursor colors
-cursor                  #F5E0DC
-cursor_text_color       #1E1E2E
-
-# URL underline color when hovering with mouse
-url_color               #F5E0DC
-
-# Kitty window border colors
-active_border_color     #B4BEFE
-inactive_border_color   #6C7086
-bell_border_color       #F9E2AF
-
-# OS Window titlebar colors
-wayland_titlebar_color  #1E1E2E
-macos_titlebar_color    #1E1E2E
-
-# Tab bar colors
-active_tab_foreground   #11111B
-active_tab_background   #CBA6F7
-inactive_tab_foreground #CDD6F4
-inactive_tab_background #181825
-tab_bar_background      #11111B
-
-# Colors for marks (marked text in the terminal)
-mark1_foreground #1E1E2E
-mark1_background #B4BEFE
-mark2_foreground #1E1E2E
-mark2_background #CBA6F7
-mark3_foreground #1E1E2E
-mark3_background #74C7EC
-
-# The 16 terminal colors
+background #000000
+foreground #cdd6f4
+selection_background #585b70
+selection_foreground #cdd6f4
+cursor_text_color #1e1e2e
+url_color #f5e0dc
 
 # black
-color0 #45475A
-color8 #585B70
+color0 #000000
+color8 #6c7086
 
 # red
-color1 #F38BA8
-color9 #F38BA8
+color1 #f38ba8
+color9 #f38ba8
 
 # green
-color2  #A6E3A1
-color10 #A6E3A1
+color2  #a6e3a1
+color10 #a6e3a1
 
 # yellow
-color3  #F9E2AF
-color11 #F9E2AF
+color3  #f9e2af
+color11 #f9e2af
 
 # blue
-color4  #89B4FA
-color12 #89B4FA
+color4  #89b4fa
+color12 #89b4fa
 
 # magenta
-color5  #F5C2E7
-color13 #F5C2E7
+color5  #f5c2e7
+color13 #f5c2e7
 
 # cyan
-color6  #94E2D5
-color14 #94E2D5
+color6  #94e2d5
+color14 #94e2d5
 
 # white
-color7  #BAC2DE
-color15 #A6ADC8
+color7  #bac2de
+color15 #a6adc8
+
+# cursor
+cursor #cdd6f4
+
+# tabs
+active_tab_background #000000
+active_tab_foreground #cdd6f4
+inactive_tab_background #000000
+inactive_tab_foreground #6c7086
+tab_bar_background #000000
+
+# marks
+mark1_foreground #000000
+mark1_background #b4befe
+
+# splits/windows
+active_border_color #f5c2e7
+inactive_border_color #181825
