attempting to fix starship prompt

--- a/dot_config/starship/starship.toml
+++ b/dot_config/starship/starship.toml
@@ -12,6 +12,9 @@ $character"""
 
 [directory]
 style = "blue"
+truncation_length = 0
+truncate_to_repo = false
+home_symbol = "~"
 
 [character]
 success_symbol = "[❯](purple)"
