attempting to fix starship prompt 2

--- a/dot_config/starship/starship.toml
+++ b/dot_config/starship/starship.toml
@@ -15,6 +15,9 @@ style = "blue"
 truncation_length = 0
 truncate_to_repo = false
 home_symbol = "~"
+use_os_path_sep = true
+substitute_home = true
+fish_style_pwd_dir_length = 1 
 
 [character]
 success_symbol = "[❯](purple)"
