--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -37,13 +37,13 @@ seat seat0 hide_cursor 1000
 set $gnome-schema org.gnome.desktop.interface
 exec_always  {
         gsettings set $gnome-schema cursor-theme 'Bibata-Modern-Classic'
-      	#gsettings set $gnome-schema color-scheme 'prefer-dark'
-      	gsettings set $gnome-schema cursor-size '24'
+        gsettings set $gnome-schema color-scheme 'prefer-dark'
+        gsettings set $gnome-schema cursor-size '24'
         gsettings set $gnome-schema gtk-theme 'Catppuccin-Mocha-Standard-Green-Dark'
-      	gsettings set org.gnome.desktop.interface.wm.preferences theme 'Catppuccin-Mocha-Standard-Green-Dark'
+        gsettings set org.gnome.desktop.interface.wm.preferences theme 'Catppuccin-Mocha-Standard-Green-Dark'
+        gsettings set org.gnome.desktop.wm.preferences button-layout ""
         #gsettings set $gnome-schema icon-theme 'Your icon theme'
         #gsettings set $gnome-schema font-name 'Your font name'
-        gsettings set org.gnome.desktop.wm.preferences button-layout ""
 }
 
 # Import variables into system-user environment
