adding whisper server systemd units and adjustments to sway config 2

--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -72,7 +72,7 @@ exec swaybg -c '#000000'
 
 exec ollama serve
 # Start whisper-npu-server
-exec systemctl --user start container-whisper-npu
+exec systemctl --user start whisper-npu
 
 #exec $scripts/pomo start
 #exec $scripts/pomo notify
