march 1 sway fix

--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -62,7 +62,7 @@ set $scripts ~/.config/sway/scripts
 set $host kitty
 set $chrome flatpak run com.google.Chrome
 
-floating_modifier $mod
+floating_modifier $mod normal
 
 set $screenshot-full $scripts/screenshot full
 set $screenshot-area $scripts/screenshot area
