fix beam shortcut

--- a/dot_local/share/applications/beam.desktop
+++ b/dot_local/share/applications/beam.desktop
@@ -1,10 +1,9 @@
-
 #!/usr/bin/env xdg-open
 
 [Desktop Entry]
 Version=1.0
 Terminal=false
 Type=Application
-Name=Calendar from Notion
+Name=Beam Dashboard
 Exec=flatpak run --command=/app/bin/chrome com.google.Chrome --profile-directory=Default --app=https://platform.beam.cloud/overview
 Icon=beam
