--- a/dot_config/mako/config
+++ b/dot_config/mako/config
@@ -1,4 +1,3 @@
-
 font=JetBrainsMono Nerd Font 12
 margin=15
 padding=15,10,15
@@ -11,15 +10,12 @@ layer=overlay
 #max_visible=3
 
 # Colors
-
 background-color=#000000
 text-color=#cdd6f4
-border-color=#89b4fa
+border-color=#cba6f7
 progress-color=over #313244
-
 [urgency=critical]
 border-color=#f38ba8
-
 [urgency=low]
 border-color=#fab387
 
